# poisson_icing

./: .gitignore  LICENSE  Makefile  README.md  poisson_icing.def  poisson_icing_cpu_only.def  poisson_icing_cuda11.def  pyproject.toml
script/: ampere-poisson-icing.sh.o5757101  hopper-poisson-icing.sh.o5757102  plot.py  volta-poisson-icing.sh.o5757104
src/poisson_icing/: __init__.py  bank.py  cpu.py  gpu.py  poissonicing.cu
tests/: benchmark.py  conftest.py  test_cpu.py  test_gpu.py
